feat: integrate Python voice agent with NestJS backend
- Add VoiceSession Prisma model with LiveKit room tracking
- Create VoiceAgentModule with service, controller, DTOs, and interfaces
- Implement REST endpoints for session management:
  - POST /voice-agent/sessions/start (creates LiveKit room, returns tokens)
  - GET /voice-agent/sessions/:id/status (real-time status)
  - POST /voice-agent/sessions/:id/end (saves transcript, marks complete)
  - GET /voice-agent/health (Python service health check)
- Add PYTHON_VOICE_AGENT_URL environment variable
- Bridge NestJS (port 4000) to Python microservice (port 8000)
- Store voice session metadata and transcripts in PostgreSQL

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -13,3 +13,74 @@ DATABASE_URL=postgresql://postgres:your-password@db.your-project-id.supabase.co:
 
 # NestJS Server Port
 PORT=4000
+
+# ============================================================================
+# AI Provider Configuration
+# ============================================================================
+
+# Video AI Provider
+# Options: tavus (custom-video in future)
+VIDEO_AI_PROVIDER=tavus
+
+# Knowledge AI Provider  
+# Options: gemini (custom-knowledge in future)
+KNOWLEDGE_AI_PROVIDER=gemini
+
+# ============================================================================
+# Tavus Configuration (Video AI)
+# Get API key from: https://www.tavus.io/
+# ============================================================================
+
+# Enable demo mode to skip real Tavus API calls (for testing/development)
+# Set to 'true' to use mock service, 'false' or remove for real API calls
+TAVUS_DEMO_MODE=false
+
+TAVUS_API_KEY=cb80e9d2689e47d48729c50a08e371e3
+TAVUS_BASE_URL=https://tavusapi.com/v2
+
+# Optional: Default replica ID for video personas
+TAVUS_DEFAULT_REPLICA_ID=r6ae5b6efc9d
+
+# Optional: Webhook callback URL for conversation events
+#TAVUS_CALLBACK_URL=https://hiringus-dev .onrender.com/webhooks/tavus
+
+# Optional: Default max call duration in seconds (default: 3600)
+TAVUS_DEFAULT_MAX_DURATION=3600
+
+# Optional: Enable recording by default (default: false)
+TAVUS_ENABLE_RECORDING=false
+
+# ============================================================================
+# Gemini Configuration (Knowledge AI)
+# Get API key from: https://aistudio.google.com/apikey
+# ============================================================================
+
+GEMINI_API_KEY=AIzaSyAX1CSp-Cgy-LTghc321PL3rOLTTq5eLP4
+
+# Model for text generation (default: gemini-1.5-pro)
+# Options: gemini-1.5-pro, gemini-1.5-flash, gemini-1.0-pro
+GEMINI_MODEL=gemini-1.5-pro
+
+# Model for text embeddings (default: text-embedding-004)
+GEMINI_EMBEDDING_MODEL=text-embedding-004
+
+# Maximum tokens in response (default: 8192)
+GEMINI_MAX_TOKENS=8192
+
+# Temperature for response generation 0-1 (default: 0.7)
+# Lower = more focused, Higher = more creative
+GEMINI_TEMPERATURE=0.7
+
+# ============================================================================
+# Voice Agent Configuration (Python Microservice)
+# ============================================================================
+
+# Python Voice Agent Service URL
+PYTHON_VOICE_AGENT_URL=http://localhost:8000
+
+# ============================================================================
+# Voice Agent Configuration
+# ============================================================================
+
+# Python Voice Agent Service URL
+PYTHON_VOICE_AGENT_URL=http://localhost:8000
